Touched up the notebook and README

--- a/DeepLearningProject.ipynb
+++ b/DeepLearningProject.ipynb
@@ -1898,7 +1898,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evaluate best (initial) model"
+    "Evaluate best model <br>\n",
+    "The initial model is best, which we initialized and trained ourselves."
    ]
   },
   {
@@ -1989,7 +1990,7 @@
     "  classification_report(\n",
     "      yTestClass,\n",
     "      yPredClass,\n",
-    "       target_names=[\"Right\", \"Left\", \"Feet\", \"tongue\"]\n",
+    "       target_names=[\"Right\", \"Left\", \"Feet\", \"Tongue\"]\n",
     "      )\n",
     "  )\n",
     "\n",
