Touching up notebook and README again

--- a/DeepLearningProject.ipynb
+++ b/DeepLearningProject.ipynb
@@ -2005,6 +2005,8 @@
     "sns.heatmap(confusion_matrix(\n",
     "      yTestClass,\n",
     "      yPredClass,\n",
+    "      xticklabels=[\"Right\", \"Left\", \"Feet\", \"Tongue\"],\n",
+    "      yticklabels=[\"Right\", \"Left\", \"Feet\", \"Tongue\"]\n",
     "      ))"
    ]
   }
